@@ -1,0 +1,13 @@
+# List of window managers which ROX-Session will offer the user.
+# Each line is a program that is searched for in PATH, or you can
+# specify a full pathname.
+# Copy this file as <Choices>/ROX-Session/WindowMans before editing it.
+
+sawfish
+sawmill
+enlightenment
+kwm
+fvwm2
+fvwm
+4Dwm
+twm
